2004-04-10  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome26.modules: Use gnome-2-6 branch for file-roller.

2004-04-10  James Henstridge  <james@daa.com.au>

	* modulesets/gnome28.modules: same changes here.

	* modulesets/gnome26.modules: add rules to build gnutls, needed
	for SSL support in libsoup.  Based on patch from sig@netdot.net
	(fixes bug #132167).

	* jhbuild/modtypes/tarball.py (parse_tarball): tarball
	dependencies weren't being handled quite right.

2004-04-08  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome26.modules, gnome28.modules: Removed duplicated
	gnome-mag section.
	* modulesets/gnome26.modules: Use gnome-2-6 branch for gnome-mag
	and gnome-terminal.

2004-04-07  James Henstridge  <james@daa.com.au>

	* modulesets/freedesktop.modules (hicolor-icon-theme): update to 0.5.

2004-04-07  Paolo Borelli  <pborelli@katamail.com>

	* modulesets/gnome26.modules: use gnome-2-6 branch of gedit.

2004-04-07  Jaka Mocnik  <jaka@gnu.org>

	* modulesets/gnome26.modules: build branch gnome-2-6 of ggv.

2004-04-06  James Henstridge  <james@daa.com.au>

	* modulesets/gnome26.modules (gnome-mag): <dep> elements don't
	take a revision tag.

2004-04-06  Bill Haneman <billh@gnome.org>

	* modulesets/gnome26.modules:
	Use gnome-2-6 branch of gnome-mag.

2004-04-06  James Henstridge  <james@daa.com.au>

	* modulesets/moduleset.dtd (tarball): allow autogenargs for
	tarball element.

	* jhbuild/modtypes/tarball.py (Tarball.do_configure): add autogen
	args for tarball builds too. (to fix bug 138946).
	(parse_tarball): parse autogenargs for tarballs.

2004-04-05  James Henstridge  <james@daa.com.au>

	* jhbuild/utils/httpcache.py: same here.

	* jhbuild/utils/packagedb.py: store dates in UTC rather than local
	timezone.

2004-04-04  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome28.modules: Fix bakery dependencies so they match
	those in gnome26.modules. Corrected the gnome-vfsmm dependencies in 
	both.