@@ -1,3 +1,10 @@
+2004-04-10  James Henstridge  <james@daa.com.au>
+
+	* jhbuild/main.py (help): add some help text.
+
+	* jhbuild/commands/info.py (do_info): add a "jhbuild info" routine
+	that prints some information about a module.
+
 2004-04-10  Murray Cumming  <murrayc@murrayc.com>
 
 	* modulesets/gnome26.modules: Use gnome-2-6 branch for file-roller.
